# HandMadeNeuralNet

GeneticNeuralNetWork/: CMakeLists.txt  Perceptrone.cpp  genetic.cpp  genetic.h  main.cpp
GeneticSnakeTrainer/: CMakeLists.txt  Perceptrone.h  PyMake.py  genetic.cpp  genetic.h  geneticSnakeTrainer.hpp  main.cpp  mlpActivators.hpp  snake.hpp  test  test.cpp
NeuralNetWork/: CMakeLists.txt  Perceptrone.cpp  Perceptrone.h  backpropagation.cpp  backpropagation.h  exec_time.h  main  main.cpp  mlp.cpp  mlp.h  mlpActivators.hpp  test  test.cpp
